# aize-jit

./: CMakeLists.txt  compile_state.h  instructions.h  jit_mem.c  jit_mem.h  main.c  string_table.c  string_table.h
instrs/: mov_r64_r64.c  ret.c  test.h
ir/: function.c  function.h  terminator.h  terminator_instrs.c  terminator_instrs.h  type.h
ir/expr/: expr.c  expr.h  expr_instrs.c  expr_instrs.h  expr_list.c  expr_list.h  load.h
